--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>My Resume</title>
 </head>
 <body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;">
-  <embed src="Johnresume.pdf" type="application/pdf" width="80%" height="90%" />
+  <embed src="JOHN CHINDADA RESUME.pdf" type="application/pdf" width="80%" height="90%" />
 </body>
 </html>
